--- a/fakture-frontend/src/app/facture/facture.css
+++ b/fakture-frontend/src/app/facture/facture.css
@@ -7,3 +7,24 @@
     font-size: 1rem;
     width: 8rem;
 }
+.mask{
+    position: absolute;
+    inset: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 0;
+    background: rgba(0, 0, 0, 0.6);
+}
+.add-facture{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: white;
+    border-radius: 0.5rem;
+    width: 50%;
+    margin: auto;
+    z-index: 2;
+    min-width: 450px;
+}
