--- a/fakture-frontend/src/app/factureBase/factureBase.html
+++ b/fakture-frontend/src/app/factureBase/factureBase.html
@@ -79,7 +79,7 @@
                 <button class="btn" type="button">Izmjeni fakturu</button>
             </div>
             <div style="padding: 0.5rem 0;">
-                <button class="btn" type="button">Obriši fakturu</button>
+                <button class="btn" type="button" (click)="remove()">Obriši fakturu</button>
             </div>
         </div> 
 
