--- a/fakture-frontend/src/app/addFacture/addFacture.css
+++ b/fakture-frontend/src/app/addFacture/addFacture.css
@@ -62,3 +62,12 @@ input {
     font-size: 1rem;
     width: 8rem;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
