--- a/fakture-frontend/src/app/factureBase/factureBase.html
+++ b/fakture-frontend/src/app/factureBase/factureBase.html
@@ -76,7 +76,7 @@
         </div>
         <div class="buttons" style="width: 30%;">
             <div style="padding: 0.5rem 0;">
-                <button class="btn" type="button">Izmjeni fakturu</button>
+                <button class="btn" type="button" (click)="update()">Izmjeni fakturu</button>
             </div>
             <div style="padding: 0.5rem 0;">
                 <button class="btn" type="button" (click)="remove()">Obriši fakturu</button>
