--- a/fakture-frontend/src/app/addFacture/addFacture.html
+++ b/fakture-frontend/src/app/addFacture/addFacture.html
@@ -250,6 +250,6 @@
     <div style="width: 100%;
     display: flex;
     justify-content: end; margin-top: 0.5rem;">
-        <button class="btn" type="button">Dodaj fakturu</button>
+        <button class="btn" type="button">{{ buttonText }}</button>
     </div>
 </div>
