--- a/fakture-frontend/src/app/facture/facture.html
+++ b/fakture-frontend/src/app/facture/facture.html
@@ -32,7 +32,11 @@
     </div>
     <div *ngIf="add || update" class="mask" (click)="closeWindow()">
         <div *ngIf="add || update" class="add-facture" style="height: 80%" (click)="$event.stopPropagation()">
-            <app-addFacture [idUpdate]="idUpdate"></app-addFacture>
+            <app-addFacture 
+            [idUpdate]="idUpdate"
+            (closeAdd)="closeAddFacture()"
+            (closeUpdate)="closeUpdateFacture()"
+            ></app-addFacture>
         </div>
     </div>
 </div>
