--- a/fakture-frontend/src/app/addFacture/addFacture.css
+++ b/fakture-frontend/src/app/addFacture/addFacture.css
@@ -57,6 +57,17 @@ input {
     border-radius: 5px;
     padding-bottom: 3px;
   }
+  .new-article-update{
+    border: 1px solid grey;
+    padding: 1rem;
+    margin-left: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    width: 20rem;
+    border-radius: 5px;
+    padding-bottom: 3px;
+    border: 1px solid #16ca16;
+  }
   .btn{
     padding: 0.5rem;
     font-size: 1rem;
