--- a/fakture-frontend/src/app/facture/facture.css
+++ b/fakture-frontend/src/app/facture/facture.css
@@ -2,6 +2,11 @@
     width: 100vh;
     height: 100vh;
 }
+.containerMask{
+    width: 100vh;
+    height: 100vh;
+    overflow: hidden;
+}
 .btn{
     padding: 0.5rem;
     font-size: 1rem;
