--- a/fakture-frontend/src/app/facture/facture.html
+++ b/fakture-frontend/src/app/facture/facture.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div style="display: flex; margin-bottom: 1rem;">
+<div [ngClass]="{'containerMask' : add || update}" class="container">
+    <div style="display: flex; margin-bottom: 1rem; margin-top: 1rem;">
         <label style="color: darkgreen;
     font-weight: bold;
     font-size: 1.2rem;">Fakture:</label>
