--- a/fakture-frontend/src/app/registration/registration.html
+++ b/fakture-frontend/src/app/registration/registration.html
@@ -39,4 +39,5 @@
     <div class="btnRegistration">
         <button (click)="registrationUser()">Registruj se</button>
       </div>
+      <div *ngIf="regSuccess">Uspješna registracija</div>
 </form>
